# GGTerm

./: DEVELOPMENT.md  GEMINI.md  PHASE_1_IMPROVEMENTS.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  32x32.png.txt  create_icons.sh  generate_icons.py
src-tauri/src/: encryption.rs  main.rs
src-tauri/src/db/: async_db.rs  mod.rs
src-tauri/src/ssh/: mod.rs
src/components/SessionManager/: SessionManager.tsx
src/components/TabBar/: TabBar.tsx
src/components/Terminal/: Terminal.tsx
src/lib/: tauri.ts
src/stores/: useTerminalStore.ts
src/types/: index.ts
