[package]
name = "ggterm"
version = "0.1.0"
description = "Супер бърз SSH терминал"
authors = ["GGTerm Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
async-trait = "0.1"
chrono = "0.4"
shellexpand = "3.1"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
